logs/mrsd_ros_tutorials/build.make.251.log.stderr
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp: In function ‘int transform(pcl::PointCloud<pcl::PointXYZ>::Ptr&)’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:123:7: error: ‘listener’ was not declared in this scope
       listener.lookupTransform("/turtle2", "/turtle1",
       ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/perception_data.cpp:129:7: error: continue statement not within a loop
       continue;
       ^
In file included from /home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:62:0:
/home/jin/ros/apriltag_size/src/apriltags/include/apriltags.h:26:1: error: ‘TagFamily’ does not name a type
 TagFamily* family_;
 ^
/home/jin/ros/apriltag_size/src/apriltags/include/apriltags.h:27:1: error: ‘TagDetector’ does not name a type
 TagDetector* detector_;
 ^
/home/jin/ros/apriltag_size/src/apriltags/include/apriltags.h:29:1: error: ‘TagDetectorParams’ does not name a type
 TagDetectorParams tag_params;
 ^
/home/jin/ros/apriltag_size/src/apriltags/include/apriltags.h:49:42: error: ‘TagDetection’ does not name a type
 void GetMarkerTransformUsingOpenCV(const TagDetection& detection, Eigen::Matrix4d& transform, cv::Mat& rvec, cv::Mat& tvec);
                                          ^
/home/jin/ros/apriltag_size/src/apriltags/include/apriltags.h:49:56: error: ISO C++ forbids declaration of ‘detection’ with no type [-fpermissive]
 void GetMarkerTransformUsingOpenCV(const TagDetection& detection, Eigen::Matrix4d& transform, cv::Mat& rvec, cv::Mat& tvec);
                                                        ^
/home/jin/ros/apriltag_size/src/apriltags/include/apriltags.h:56:30: error: ‘TagDetection’ does not name a type
 void DrawMarkerOutline(const TagDetection& detection, const cv::Scalar outline_color, cv::Mat& image);
                              ^
/home/jin/ros/apriltag_size/src/apriltags/include/apriltags.h:56:44: error: ISO C++ forbids declaration of ‘detection’ with no type [-fpermissive]
 void DrawMarkerOutline(const TagDetection& detection, const cv::Scalar outline_color, cv::Mat& image);
                                            ^
/home/jin/ros/apriltag_size/src/apriltags/include/apriltags.h:57:28: error: ‘TagDetection’ does not name a type
 void DrawMarkerEdges(const TagDetection& detection, cv::Mat& image);
                            ^
/home/jin/ros/apriltag_size/src/apriltags/include/apriltags.h:57:42: error: ISO C++ forbids declaration of ‘detection’ with no type [-fpermissive]
 void DrawMarkerEdges(const TagDetection& detection, cv::Mat& image);
                                          ^
/home/jin/ros/apriltag_size/src/apriltags/include/apriltags.h:58:25: error: ‘TagDetection’ does not name a type
 void DrawMarkerID(const TagDetection& detection, const cv::Scalar text_color, cv::Mat& image);
                         ^
/home/jin/ros/apriltag_size/src/apriltags/include/apriltags.h:58:39: error: ISO C++ forbids declaration of ‘detection’ with no type [-fpermissive]
 void DrawMarkerID(const TagDetection& detection, const cv::Scalar text_color, cv::Mat& image);
                                       ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp: In constructor ‘ImageConverter::ImageConverter()’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:103:5: error: ‘apriltag_sub’ was not declared in this scope
     apriltag_sub = it_.subscribe("/apriltags/detections", 1, &ImageConverter::apriltagCB, this);
     ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:103:95: error: no matching function for call to ‘image_transport::ImageTransport::subscribe(const char [22], int, void (ImageConverter::*)(const ConstPtr&), ImageConverter* const)’
     apriltag_sub = it_.subscribe("/apriltags/detections", 1, &ImageConverter::apriltagCB, this);
                                                                                               ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:103:95: note: candidates are:
In file included from /home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:4:0:
/opt/ros/indigo/include/image_transport/image_transport.h:74:14: note: image_transport::Subscriber image_transport::ImageTransport::subscribe(const string&, uint32_t, const boost::function<void(const boost::shared_ptr<const sensor_msgs::Image_<std::allocator<void> > >&)>&, const VoidPtr&, const image_transport::TransportHints&)
   Subscriber subscribe(const std::string& base_topic, uint32_t queue_size,
              ^
/opt/ros/indigo/include/image_transport/image_transport.h:74:14: note:   no known conversion for argument 4 from ‘ImageConverter* const’ to ‘const VoidPtr& {aka const boost::shared_ptr<void>&}’
/opt/ros/indigo/include/image_transport/image_transport.h:82:14: note: image_transport::Subscriber image_transport::ImageTransport::subscribe(const string&, uint32_t, void (*)(const ImageConstPtr&), const image_transport::TransportHints&)
   Subscriber subscribe(const std::string& base_topic, uint32_t queue_size,
              ^
/opt/ros/indigo/include/image_transport/image_transport.h:82:14: note:   no known conversion for argument 3 from ‘void (ImageConverter::*)(const ConstPtr&) {aka void (ImageConverter::*)(const boost::shared_ptr<const apriltags::AprilTagDetections_<std::allocator<void> > >&)}’ to ‘void (*)(const ImageConstPtr&) {aka void (*)(const boost::shared_ptr<const sensor_msgs::Image_<std::allocator<void> > >&)}’
/opt/ros/indigo/include/image_transport/image_transport.h:95:14: note: template<class T> image_transport::Subscriber image_transport::ImageTransport::subscribe(const string&, uint32_t, void (T::*)(const ImageConstPtr&), T*, const image_transport::TransportHints&)
   Subscriber subscribe(const std::string& base_topic, uint32_t queue_size,
              ^
/opt/ros/indigo/include/image_transport/image_transport.h:95:14: note:   template argument deduction/substitution failed:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:103:95: note:   mismatched types ‘const ImageConstPtr& {aka const boost::shared_ptr<const sensor_msgs::Image_<std::allocator<void> > >&}’ and ‘const ConstPtr& {aka const boost::shared_ptr<const apriltags::AprilTagDetections_<std::allocator<void> > >&}’
     apriltag_sub = it_.subscribe("/apriltags/detections", 1, &ImageConverter::apriltagCB, this);
                                                                                               ^
In file included from /home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:4:0:
/opt/ros/indigo/include/image_transport/image_transport.h:106:14: note: template<class T> image_transport::Subscriber image_transport::ImageTransport::subscribe(const string&, uint32_t, void (T::*)(const ImageConstPtr&), const boost::shared_ptr<X>&, const image_transport::TransportHints&)
   Subscriber subscribe(const std::string& base_topic, uint32_t queue_size,
              ^
/opt/ros/indigo/include/image_transport/image_transport.h:106:14: note:   template argument deduction/substitution failed:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:103:95: note:   mismatched types ‘const ImageConstPtr& {aka const boost::shared_ptr<const sensor_msgs::Image_<std::allocator<void> > >&}’ and ‘const ConstPtr& {aka const boost::shared_ptr<const apriltags::AprilTagDetections_<std::allocator<void> > >&}’
     apriltag_sub = it_.subscribe("/apriltags/detections", 1, &ImageConverter::apriltagCB, this);
                                                                                               ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:104:5: error: ‘kinect_apriltag_tf’ was not declared in this scope
     kinect_apriltag_tf = nh.advertiseService("ImageConverter", &ImageConverter::transformCB, this);
     ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:104:65: error: ‘transformCB’ is not a member of ‘ImageConverter’
     kinect_apriltag_tf = nh.advertiseService("ImageConverter", &ImageConverter::transformCB, this);
                                                                 ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp: In member function ‘int ImageConverter::transform(pcl::PointCloud<pcl::PointXYZ>::Ptr&)’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:131:9: error: ‘listener’ was not declared in this scope
         listener.lookupTransform("/turtle2", "/turtle1",
         ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:137:9: error: continue statement not within a loop
         continue;
         ^
make[2]: *** [CMakeFiles/perception_data.dir/src/perception_data.cpp.o] Error 1
make[1]: *** [CMakeFiles/perception_data.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make[2]: *** [CMakeFiles/subscribe_pc_node.dir/src/subscribe_pc_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/subscribe_pc_node.dir/all] Error 2
make: *** [all] Error 2
